config/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8030
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: www.baidu.com
          route_config:
            name: remote_route
            virtual_hosts:
            - name: www.baidu.com
              domains:
                - "*"
              routes:
                match:
                  prefix: "/"
                route:
                  cluster: www.baidu.com
                  host_rewrite: www.baidu.com
          http_filters:
          - name: envoy.router

  clusters:
  - name: www.baidu.com
    connect_timeout: 30.0s
    type: logical_dns
    upstream_connection_options:
      tcp_keepalive:
        keepalive_time: 300
    lb_policy: round_robin
    load_assignment:
      cluster_name: www.baidu.com
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.baidu.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
        sni: www.baidu.com

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8080
